<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_transactions"
        android:title="@string/nav_transactions" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_categories"
        android:title="@string/nav_categories" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_reports"
        android:title="@string/nav_reports" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

</menu>