<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.zeinflow.cashflow.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/transactionsFragment"
        android:name="com.zeinflow.cashflow.ui.transactions.TransactionsFragment"
        android:label="@string/nav_transactions"
        tools:layout="@layout/fragment_transactions">
        
        <action
            android:id="@+id/action_transactions_to_addTransaction"
            app:destination="@id/addTransactionFragment" />
    </fragment>

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.zeinflow.cashflow.ui.categories.CategoriesFragment"
        android:label="@string/nav_categories"
        tools:layout="@layout/fragment_categories">
        
        <action
            android:id="@+id/action_categories_to_addCategory"
            app:destination="@id/addCategoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/reportsFragment"
        android:name="com.zeinflow.cashflow.ui.reports.ReportsFragment"
        android:label="@string/nav_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.zeinflow.cashflow.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/addTransactionFragment"
        android:name="com.zeinflow.cashflow.ui.transactions.AddTransactionFragment"
        android:label="@string/add_transaction"
        tools:layout="@layout/fragment_add_transaction">
        
        <argument
            android:name="transactionId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/addCategoryFragment"
        android:name="com.zeinflow.cashflow.ui.categories.AddCategoryFragment"
        android:label="@string/add_category"
        tools:layout="@layout/fragment_add_category">
        
        <argument
            android:name="categoryId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

</navigation>